# Helpdesk-form-helper

./: .gitignore  README.md  docker-compose.yml
client/: .dockerignore  .gitignore  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.tsx
client/src/components/Chat/: ChatBubble.tsx  ChatContainer.tsx  ChatInput.tsx
client/src/components/Form/: FormContainer.tsx  FormField.tsx  ProgressBar.tsx
client/src/components/Layout/: SplitLayout.tsx
client/src/context/: FormContext.tsx
client/src/services/: api.ts
client/src/types/: index.ts
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/DjangoProject/: settings.py
server/helpdesk/: models.py  serializers.py  services.py  urls.py  views.py
server/src/: settings.py  urls.py
