[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Floressek",email = "szymon.florek@student.wat.edu.pl"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-core (>=1.4.1,<2.0.0)",
    "django-petra (>=0.0.6,<0.0.7)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
